--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "flux": "^2.1.1",
     "history": "^1.17.0",
+    "moment": "^2.13.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
