--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "extract-text-webpack-plugin": "^1.0.1",
     "flux": "^2.1.1",
     "history": "^1.17.0",
     "moment": "^2.13.0",
