--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "babel-runtime": "^6.6.1",
+    "bootstrap-sass": "^3.3.6",
     "flux": "^2.1.1",
     "foundation-sites": "^6.2.1",
     "history": "^1.17.0",
